Add results on model cat of marked objects
- Simpler classification of weak equivalences
- Left properness
- Simpliciality

--- a/main.bib
+++ b/main.bib
@@ -29,7 +29,7 @@
   publisher={International Press of Boston}
 }
 
-@Article{equipping-weak-equivalences,
+@article{equipping-weak-equivalences,
   author={Bourke, John},
   title={Equipping weak equivalences with algebraic structure},
   journal={Mathematische Zeitschrift},
@@ -100,7 +100,6 @@
   year={1990}
 }
 
-
 @inproceedings{on-the-interpretation-of-type-theory-in-lcc-categories,
   title={On the interpretation of type theory in locally cartesian closed categories},
   author={Hofmann, Martin},
@@ -157,4 +156,12 @@
   author={Gambino, Nicola and Henry, Simon},
   journal={arXiv preprint arXiv:1905.06281},
   year={2019}
+}
+
+@book{basic-concepts-of-enriched-category-theory,
+  title={Basic concepts of enriched category theory},
+  author={Kelly, Gregory Maxwell and Kelly, Max},
+  volume={64},
+  year={1982},
+  publisher={CUP Archive}
 }
