--- a/main.tex
+++ b/main.tex
@@ -23,10 +23,11 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
-\newtheorem{definition}{Definition}
-\newtheorem{definition-proposition}{Definition and Proposition}
 \newtheorem{proposition}{Proposition}
-\newtheorem{assumption}{Assumption}
+\theoremstyle{remark}
+\newtheorem{remark}{Remark}
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}
 
 \begin{document}
 
@@ -190,6 +191,12 @@ Similarly, the model structure on the category of lcc-marked categories is defin
 First, a model structure corresponding to $\Sigma$-structures is constructed.
 This model structure identifies lcc-marked categories if their choice of marking differs only within isomorphism classes.
 
+Now suppose that $\mathcal{C} = \mathcal{M}$ is a model category.
+Let $\gamma : \mathcal{M} \rightarrow \operatorname{Ho} \mathcal{M}$ be the canonical functor to the homotopy category.
+A marking $m_X \subseteq \mathrm{Hom}(i(-), X)$ of some $X \in \operatorname{Ob} \mathcal{M}$ induces a canonical marking $\gamma(m_X) \subseteq \mathrm{Hom}(\gamma(i(-)), \gamma(X))$ on $\gamma(X)$ by taking $\gamma(m_X)$ to be the image of $m_X$ under $\gamma$.
+Thus a morphism $K \rightarrow X$ in $\operatorname{Ho} \mathcal{M}$ is marked if and only if it has a preimage under $\gamma$ which is marked.
+The assignment $(m_X, X) \mapsto (\gamma(m_X), \gamma(X))$ is functorial.
+
 \begin{theorem}[\cite{marked-objects} Theorem 3.3]
   \label{th:marked-model-category}
   Let $\mathcal{M}$ be a combinatorial model category $\mathcal{M}$.
@@ -197,45 +204,111 @@ This model structure identifies lcc-marked categories if their choice of marking
   Then the following defines the structure of a combinatorial model category on $\mathcal{M}^i$:
   \begin{itemize}
     \item
-      A marking-preserving morphism $f : X \rightarrow Y$ is a cofibration if and only if it is a cofibration in $\mathcal{M}$.
+      A morphism $f : (m_X, X) \rightarrow (m_y, Y)$ in $\mathcal{M}^i$ is a cofibration if and only if $f : X \rightarrow Y$ is a cofibration in $\mathcal{M}$.
     \item
-      Let $R : \mathcal{M} \rightarrow \mathcal{M}$ be a functor and $t : \mathrm{Id} \Rightarrow R$ be a natural transformation such that $M \xrightarrow{t_M} R(M)$ is a fibrant replacement for each $M \in \operatorname{Ob} \mathcal{M}$.
-      Then a morphism $f : X \rightarrow Y$ in $\mathcal{M}^i$ is a weak equivalence if and only if $U(f)$ is a weak equivalence in $\mathcal{M}$ and for all $h : i(K) \rightarrow R(U(X))$ and marked $k : i(K) \rightarrow U(Y)$, if $R(U(f)) \circ h$ and $t_{U(Y)} \circ k$ are homotopic, then $h$ is homotopic to a map that factors as $i(K) \xrightarrow{h'} U(X) \xrightarrow{t_{U(X)}} R(U(X))$ with $h'$ marked.
-      \todo{
-        This looks equivalent to saying that $f$ reflects marked maps in the homotopy category, which would be easier to state but is not proved in \cite{marked-objects}.
-      }
-    \item
-      A marked object $X$ is fibrant if and only if $U(X)$ is fibrant in $\mathcal{M}$ and marked maps are stable under homotopy in $\mathcal{M}$; that is, if $k \simeq \ell : F(K) \rightarrow U(X)$ are homotopic maps in $\mathcal{M}$ and $k$ is marked, then $\ell$ is marked.
+      A morphism $f : (m_X, X) \rightarrow (m_Y, Y)$ in $\mathcal{M}^i$ is a weak equivalence if and only if $\gamma(f) : (\gamma(m_X), \gamma(X)) \rightarrow (\gamma(m_Y), \gamma(Y))$ is an isomorphism in $(\operatorname{Ho} \mathcal{M})^{\gamma i}$.
   \end{itemize}
-  Let $I$ be a set of generating cofibrations of $\mathcal{M}$.
-  Then the set
-  \begin{equation}
-    I' = \{ i^\flat \mid i \in I \} \cup \{ K^\flat \rightarrow (K, G\{\mathrm{id} : K \rightarrow K\}) \mid K \in \mathcal{K} \}
-  \end{equation}
-  generates the cofibrations of $\mathcal{M}^i$.
-  \todo{
-    Can we say something about generating trivial cofibrations?
-    In the case where every object of $\mathcal{M}$ is fibrant this is the obvious thing (see proof in \cite{marked-objects}, but I'm doubtful whether this works in general.
-  }
-  Moreover, the adjunctions $(-)^\flat \dashv U$ and $U \dashv (-)^\sharp$ are Quillen adjunctions.
+  A marked object $(X, m_X)$ is fibrant if and only if $X$ is fibrant in $\mathcal{M}$ and marked maps are stable under homotopy in $\mathcal{M}$; that is, if $k \simeq h : i(K) \rightarrow X$ are homotopic maps in $\mathcal{M}$ and $k$ is marked, then $h$ is marked.
+  The adjunctions $(-)^\flat \dashv U$ and $U \dashv (-)^\sharp$ are Quillen adjunctions.
 \end{theorem}
+
+\begin{remark}
+  The classification of weak equivalences in theorem \ref{th:marked-model-category} does not appear as stated in \cite{marked-objects}, but follows easily from results therein.
+  Let $t : \mathrm{Id} \Rightarrow R : \mathcal{M} \rightarrow \mathcal{M}$ be the unit of a fibrant replacement functor.
+  By \cite[lemma 2.5]{marked-objects}, a map $f : (m_X, X) \rightarrow (m_Y, Y)$ is a weak equivalence in $\mathcal{M}^i$ if and only if $f$ is a weak equivalence in $\mathcal{M}$ and for every diagram (of solid arrows)
+  \begin{equation}
+    \label{eq:isaev-classification-weak-equivalences}
+    \begin{tikzcd}
+      i(K) \arrow[drr, bend left, "k"] \arrow[ddr, bend right, "h"'] \arrow[dr, dashed, "h'"] \arrow[ddr, phantom, "\simeq"] \\
+      & X \arrow[d, "t_X"] \arrow[r, "f"] & Y \arrow[d, "t_Y"]  \\
+      & R(X) \arrow[r, "R(f)"] & R(Y)  \\
+    \end{tikzcd}
+  \end{equation}
+  in which the outer square commutes up to homotopy and $k$ is marked, there exists a marked map $h' : i(K) \dashrightarrow X$ as indicated such that $h' t_X \simeq h$.
+  ($h'$ is not required to commute with $k$ and $f$ in any sense.)
+
+  Now assume that $f : (m_X, X) \rightarrow (m_Y, Y)$ satisfies this condition and let us prove that $\gamma(f)$ is an isomorphism of induced marked objects of the homotopy category.
+  $\gamma(f)$ is an isomorphism in $\mathcal{M}$, so it suffices to show that $\gamma(f)^{-1}$ preserves markings.
+  By definition, every marked morphism of $\gamma(Y)$ is of the form $\gamma(k) : \gamma(i(K)) \rightarrow \gamma(Y)$ for some marked $k : i(K) \rightarrow Y$.
+  Because $i(X)$ is cofibrant and $R(X)$ is fibrant, the map $\gamma(t_X)^{-1} \gamma(f)^{-1} \gamma(k) : \gamma(i(K)) \rightarrow \gamma(R(X))$ has a preimage $h : i(X) \rightarrow R(X)$ under $\gamma$.
+  \todo{Look this up.}
+  As $i(K)$ is cofibrant, $R(Y)$ is fibrant and $\gamma(h \circ R(f)) = \gamma(t_Y k)$, there is a homotopy $h \circ R(f) \simeq t_Y k$.
+  By assumption, there exists a marked map $h' : i(K) \rightarrow X$ such that $h' t_X \simeq h$, thus $\gamma(f)^{-1} \gamma(k) = \gamma(h')$ is marked.
+
+  To prove the other direction of the equivalence, assume that $\gamma(f)$ is an isomorphism of marked objects and let $h, k$ as in \eqref{eq:isaev-classification-weak-equivalences}.
+  $\gamma(f)^{-1} \gamma(k)$ is marked, hence has a preimage $h' : i(K) \rightarrow X$ under $\gamma$ which is marked.
+  We have $\gamma(t_X h') = \gamma(h)$ because postcomposition of both sides with the isomorphism $\gamma9R(f))$ gives equal results.
+  $i(K)$ is cofibrant and $R(X)$ is fibrant, thus $t_X h' \simeq h$.
+\end{remark}
 
 \begin{lemma}
   \label{lem:simplicial-marked-objects}
-  Suppose that in the setting of theorem \ref{th:marked-model-category} $\mathcal{M}$ is furthermore a simplicial model category.
-  Then $\mathcal{M}^i$ is a simplicial model category, and $(-)^\flat \dashv U$ and $U \dashv (-)^\sharp$ are simplicial Quillen adjunctions.
+  Let $\mathcal{M}$ and $i : K \rightarrow \mathcal{M}$ be as in theorem \ref{th:marked-model-category}.
+  \begin{enumerate}
+    \item
+      \label{itm:marked-left-proper}
+      If $\mathcal{M}$ is a left proper model category, then $\mathcal{M}^i$ is a left proper model category.
+    \item
+      \label{itm:marked-simplicial}
+      If $\mathcal{M}$ is a simplicial model category, then $\mathcal{M}^i$ admits the structure of a simplicial model category such that $(-)^\flat \dashv U$ and $U \dashv (-)^\sharp$ lift to simplicial Quillen adjunctions.
+  \end{enumerate}
 \end{lemma}
 \begin{proof}
-  The mapping spaces of $\mathcal{M}^i(X, Y)$ are given by the full subspaces of $\mathcal{M}(X, Y)$ of marking preserving maps.
+  \emph{\ref{itm:marked-left-proper}}.
+  Let 
+  \begin{equation}
+    \begin{tikzcd}
+      X \arrow[r, "g"] \arrow[d, "f"] \arrow[dr, phantom, near end, "\ulcorner"] & Y_2 \arrow[d, "f'"] \\
+      Y_1 \arrow[r, "g'"] & Z
+    \end{tikzcd}
+  \end{equation}
+  \todo{indicate weak eq?}
+  be a pushout square in $\mathcal{M}^i$ such that $f$ is a weak equivalence.
+  $\mathcal{M}$ is left proper, so $\gamma(f')$ is invertible as a map in $\operatorname{Ho} \mathcal{M}$.
+
+  A map $k : i(K) \rightarrow U(Z)$ is marked if and only if it factors via a marked map $k_1 : i(K) \rightarrow U(Y_1)$ or via a marked map $k_2 : i(K) \rightarrow U(Y_2)$.
+  In the first case,
+  \begin{equation}
+    \gamma(f')^{-1} \gamma(k) = \gamma(g) \gamma(f)^{-1} \gamma(k_1),
+  \end{equation}
+  which is marked because $f$ is a weak equivalence, and otherwise
+  \begin{equation}
+    \gamma(f')^{-1} \gamma(k) = \gamma(k_2),
+  \end{equation}
+  which is marked, too.
+  We have showed that $\gamma(f')$ is an isomorphism of marked objects in $\operatorname{Ho} \mathcal{M}$, thus $f'$ is a weak equivalence.
+
+  \emph{\ref{itm:marked-simplicial}}.
+  The simplices of mapping spaces $\mathcal{M}^i(X, Y)$ are those simplices of $\mathcal{M}(U(X), U(Y))$ whose vertices are maps $U(X) \rightarrow U(Y)$ that preserve the markings.
   The power $X^S$ of a marked object $X$ by a simplicial set $S$ is given by the power $U(X)^S$ in $\mathcal{M}$ in which $k : i(K) \rightarrow U(X)^S$ is marked if and only if the composite $K \rightarrow U(X^G) \xrightarrow{\mathrm{id}^s} U(X)$ is marked for every vertex $s : \Delta^0 \rightarrow S$.
   Dually, the tensor $S \otimes X$ is given the underlying tensor $S \otimes U(X)$, and maps $k : K \rightarrow U(S \otimes X)$ are marked if and only if they factor as $K \xrightarrow{k} U(X) \xrightarrow{s \otimes \mathrm{id}} S \times U(X)$ for some $s : \Delta^0 \rightarrow S$ and $k$ marked in $U(X)$.
-  The explicit construction shows that the adjunction $(-)^\flat \dashv U$ and $U \dashv (-)^\flat$ are simplicial.
+  It follows by \cite[Theorem 4.85]{basic-concepts-of-enriched-category-theory} from the preservation of tensors and cotensors by $U$ that the 1-categorical adjunctions $(-)^\flat \dashv U$ and $U \dashv (-)^\flat$ extend to simplicial adjunctions.
+
   It remains to show that the tensoring $\mathrm{sSet} \times \mathcal{M}^i \rightarrow \mathcal{M}^i$ is a Quillen bifunctor.
-  \todo{
-    See also \cite{marked-objects} Lemma 3.4.
-    TODO---$U$ preserves tensoring, so checking that the pushout product of cofibrations is a cofibration is trivial.
-    I don't know what to do if either of the two cofibrations is trivial though.
-  }
+  For this we need to prove that if $f : S \rightarrowtail T$ is a cofibration of simplicial sets and $g : X \rightarrowtail Y$ is a cofibration of marked objects, then the canonical map $f \mathbin{\square} g$ in
+  \begin{equation}
+    \label{eq:tensor-pushout-product}
+    \begin{tikzcd}
+      S \otimes X \arrow[r] \arrow[d] \arrow[dr, phantom, near end, "\ulcorner"] & T \otimes X \arrow[d] \arrow[ddr, bend left=10] \\
+      S \otimes Y \arrow[r] \arrow[drr, bend right=10] & \cdot \arrow[dr, dashed, "f \mathbin{\square} g" description, label] \\
+      & & T \otimes Y
+    \end{tikzcd}
+  \end{equation}
+  is a cofibration, and that it is a weak equivalence if at least one of $f$ and $g$ is furthermore a weak equivalence.
+  The first part follows directly from the same property for the simplical enrichment of $\mathcal{M}$ and the fact that $U$ preserves tensors and pushouts, and reflects cofibrations.
+
+  For the second part, we have in both cases $f \mathbin{\square} g$ is a weak equivalence when considered as morphism in $\mathcal{M}$ because $\mathcal{M}$ is a simplicial model category.
+  Thus we only need to show that $f \mathbin{\square} g$ reflects a given marked morphism $k : i(K) \rightarrow T \otimes Y$ in $\operatorname{Ho} \mathcal{M}$.
+  It follows from the construction of $T \otimes Y$ that for any such $k$ there exists a vertex $t : \Delta^0 \rightarrow T$ such that $k = (t \otimes \mathrm{id}) \circ k_0$ for some marked map $k_0 : i(K) \rightarrow Y = \Delta^0 \otimes Y$.
+
+  Assume first that $f$ is a trivial cofibration.
+  Then there exists vertex $s : \Delta^0 \rightarrow S$ such that $f(s)$ and $t$ are in the same path component of $T$.
+  Thus $k$ is (left) homotopic to $(f(s) \otimes \mathrm{id}) \circ k_0$, which factors via the marked map $(s \otimes \mathrm{id}) \circ k_0 : i(K) \rightarrow S \otimes Y$.
+  Thus $\gamma(f)$ reflects marked morphisms.
+
+  Now assume that $g$ is a trivial cofibration.
+  Then $\gamma(g)$ reflects marked maps, i.e.\@ there exists marked $h_0 : i(K) \rightarrow X$ such that $\gamma(f)\gamma(h) = \gamma(k_0)$.
+  Thus the equivalence class of $(t \otimes \mathrm{id}) \circ h_0 : i(K) \rightarrow S \otimes X$ in $\operatorname{Ho} \mathcal{M}$ is marked and mapped to $\gamma(k)$ under postcomposition by $\gamma(f)$.
 \end{proof}
 
 So far, the model structure is not aware of what kind of universal property marked diagrams are supposed to have, much like structures interpreting logical signatures are defined without reference to a set of axioms they might satisfy.
@@ -530,14 +603,22 @@ In order to speak of canonical choices of lcc structure, we need canonical lifts
   The category of algebraically fibrant objects is denoted by $\operatorname{Alg} \mathcal{M}$, and the evident forgetful functor $\operatorname{Alg} \mathcal{M} \rightarrow \mathcal{M}$ by $G$.
 \end{definition}
 
+Fix a set $J$ of generating trivial cofibrations of $\mathrm{Lcc}$.
+As all of the morphisms $\mathbf{T_1}$, $\mathbf{Pb_1}$ and $\mathbf{Pi_1}$ of definition \ref{def:lcc-axioms} are trivial cofibrations in $\mathrm{Lcc}$, we may assume that they are in $J$.
+Let $(\mathcal{C}, \ell)$ be an algebraically fibrant lcc sketch (with respect to $J$).
+Then $\mathcal{C}$ is a fibrant lcc sketch, i.e.\@ an lcc category.
+The lifts $\ell_{j, a}$ against generating trivial cofibrations $j \in J$ determine canonical lcc structure on $\mathcal{C}$:
+The lift against $\mathbf{T_1}$ determines a canonical terminal object, lifts against $\mathbf{Pb_1}$ determine canonical pullback squares, and lifts against $\mathbf{Pi_1}$ determine canonical dependent products.
+Morphisms of fibrant lcc sketches preserve the universal properties of terminal objects, pullback squares and dependent products.
+Morphisms of algebraically fibrant lcc sketches furthermore preserve canonical choices of these universal objects:
+They are strict lcc functors.
+
 \begin{theorem}[\cite{algebraic-models} Proposition 2.4, \cite{equipping-weak-equivalences} Theorem 19]
   \label{th:algebraically-fibrant-model-category}
   Suppose $\mathcal{M}$ is a combinatorial model category.
-  Then $G$ is monadic with left adjoint $F$.
-  The model structure of $\mathcal{M}$ can be transferred along the adjunction $F \dashv G$ to $\operatorname{Alg} \mathcal{M}$.
-  $\operatorname{Alg} \mathcal{M}$ is a combinatorial model category, and $F \dashv G$ is a Quillen equivalence.
+  Then $G$ is monadic with left adjoint $F$, and $\operatorname{Alg} \mathcal{M}$ is a locally presentable category.
+  The model structure of $\mathcal{M}$ can be transferred along the adjunction $F \dashv G$ to $\operatorname{Alg} \mathcal{M}$, making $\operatorname{Alg} \mathcal{M}$ a combinatorial model category and $F \dashv G$ a Quillen equivalence.
 \end{theorem}
-
 Thus with theorem \ref{th:algebraically-fibrant-model-category} we have found an equivalent model for the category of lcc categories:
 \begin{definition}
   The model category of strict lcc categories and strict lcc functors is given by $\mathrm{sLcc} = \operatorname{Alg} \mathrm{Lcc}$.
@@ -559,12 +640,12 @@ Thus with theorem \ref{th:algebraically-fibrant-model-category} we have found an
     \end{tikzcd}
   \end{equation}
   where $\{ t, \sigma \}$ denotes an lcc sketch with two objects and $\{ v : t \rightarrow \sigma \}$ is an lcc sketch with a single nontrivial morphism.
-  The vertical left morphism is induced by mapping $t$ to $1$ and $\sigma$ to $\sigma$, and the top morphism is the evident inclusion.
+  The vertical morphism on the left is induced by mapping $t$ to $1$ and $\sigma$ to $\sigma$, and the top morphism is the evident inclusion.
   The variable $\Gamma.\sigma \vdash \mathbf{v} : p(\sigma)$ is given by the image of $v$.
 
-  The unit type $\Gamma \vdash \mathbf{1}$ is given by the canonical terminal object of $\Gamma$.
+  Unit types $\Gamma \vdash \mathbf{1}$ are given by the canonical terminal objects of strict lcc categories $\Gamma$.
   Binary product types $\Gamma \vdash \sigma \mathbf{\times} \tau$ are given by fibre products $\sigma \times_1 \tau$ over the canonical terminal object $1$ in $\Gamma$.
-  Finally, equality types $\Gamma \vdash \operatorname{\mathbf{Eq}} s \, t$ are constructed as pullbacks
+  Finally, equality types $\Gamma \vdash \operatorname{\mathbf{Eq}} s \, t$ are constructed as canonical pullbacks
   \begin{equation}
     \label{eq:slcc-context-extension}
     \begin{tikzcd}
@@ -572,38 +653,55 @@ Thus with theorem \ref{th:algebraically-fibrant-model-category} we have found an
       1 \arrow[r, "s"] & \sigma,
     \end{tikzcd}
   \end{equation}
-  i.e.\@ as the equalizer of $s$ and $t$.
+  in $\Gamma$, i.e.\@ as equalizers of $s$ and $t$.
 
-  The type constructors defined such and the (omitted) term constructors are built from the canonical structure of strict lcc category and hence stable under substitution.
+  The type constructors defined such (and evident term constructors) are built from the canonical structure of strict lcc category and hence stable under substitution.
 \end{proof}
 
-Unfortunately, $\mathrm{sLcc}$ does not support $\Pi$- or $\Sigma$-types in a similarly obvious way.
+Unfortunately, $\mathrm{sLcc}$ does not support $\mathbf{\Pi}$- or $\mathbf{\Sigma}$-types in a similarly obvious way.
 The type forming rule for $\Pi$-types is
 \begin{equation}
   \inferrule
   {\Gamma \vdash \sigma \\ \Gamma.\sigma \vdash \tau}
   {\Gamma \vdash \Pi_\sigma \tau}.
 \end{equation}
-To interpret it, we would like to apply the dependent product functor $\Gamma_{/ \sigma} \rightarrow \Gamma$ to $\tau$.
-But $\tau$ is an object of $\Gamma.\sigma$, so we need a comparison functor $D : \Gamma.\sigma \rightarrow \Gamma_{/ \sigma}$.
-An obvious attempt at constructing it is to use of the universal property of $\Gamma.\sigma$ as context extension:
+To interpret it, we would like to apply the dependent product functor $\Gamma_{/ \sigma} \rightarrow \Gamma$ of underlying categories to $\tau$.
+But $\tau$ is an object of $\Gamma.\sigma$, so we will first need to construct a comparison map $D : \Gamma.\sigma \rightarrow \Gamma_{/ \sigma}$.
+
+$\Gamma.\sigma$ has a universal property, and it is tempting to define $D$ as a strict lcc functor.
+Note that the slice category $U(\Gamma_{/ \sigma})$ can be constructed as pullback
+\begin{equation}
+  \Gamma
+\end{equation}
+
+$\Gamma.\sigma$ has a universal property
+First
+A first attempt at constructing it is to use of the universal property of $\Gamma.\sigma$ as context extension:
 The pullback functor $\sigma^* : \Gamma \rightarrow \Gamma_{/ \sigma}$ is lcc and the diagonal $d : \sigma \rightarrow \sigma \times \sigma$ induces a term $\Gamma_{\sigma} \vdash d' : \sigma \times \sigma$ in $\Gamma_{/ \sigma}$.
 However, the pullback functor $\sigma^*$, while lcc, is usually not strict lcc, whereas the universal property of $\Gamma.\sigma$ requires a strict lcc functor.
 
 \section{Algebraically cofibrant strict lcc categories}
 \label{sec:algebraically-cofibrant}
 
-As a starting point to remedy the situation, recall that the slice category $\Gamma_{/ \sigma}$ of an lcc category $\Gamma$ (or any category with finite limits) is bifreely generated from the pullback functor $\sigma^* : \Gamma \rightarrow \Gamma_{/ \sigma}$ and the diagonal of $\sigma$, which in $\Gamma_{/ \sigma}$ is up to isomorphism a morphism from the terminal object to $\sigma^*(\sigma)$.
-Phrased model categorically, bifreeness amounts to saying that the square
+Recall that the slice category $\Gamma_{/ \sigma}$ of an lcc category $\Gamma$ (or any category with finite limits) is bifreely generated from the pullback functor $\sigma^* : \Gamma \rightarrow \Gamma_{/ \sigma}$ and the diagonal of $\sigma$, which in $\Gamma_{/ \sigma}$ is up to isomorphism a morphism from the terminal object to $\sigma^*(\sigma)$.
+Phrased model categorically, bifreeness amounts to asserting that the square
 \begin{equation}
   \label{eq:homotopy-pushout-lcc}
   \begin{tikzcd}
     \{ t, \sigma \} \arrow[r] \arrow[d] & \{ v : t \rightarrow \sigma \} \arrow[d] \\
-    \Gamma \arrow[r, "x^*"] & \Gamma_{/ x}
+    \Gamma \arrow[r, "\sigma^*"] & \Gamma_{/ \sigma}
   \end{tikzcd}
 \end{equation}
 is a homotopy pushout square in $\mathrm{Lcc}$.
-Equivalently, the two lcc sketches appearing in the top row with their weakly equivalent fibrant replacements, giving us essentially the same top left span as in \eqref{eq:slcc-context-extension} but in $\mathrm{Lcc}$.
+Equivalently, the two lcc sketches appearing in the top row can be replaced by weakly equivalent fibrant objects, giving us the homotopy pushout square
+\begin{equation}
+  \label{eq:homotopy-pushout-lcc}
+  \begin{tikzcd}
+    G(F(\{ t, \sigma \})) \arrow[r] \arrow[d] & G(F(\{ v : t \rightarrow \sigma \})) \arrow[d] \\
+    \Gamma \arrow[r, "\sigma^*"] & \Gamma_{/ \sigma}.
+  \end{tikzcd}
+\end{equation}
+
 Because $\mathrm{Lcc}$ and $\mathrm{sLcc}$ are Quillen equivalent, we should thus expect $\Gamma_{/ \sigma}$ and $\Gamma.\sigma$ to be weakly equivalent if the pushout square \eqref{eq:slcc-context-extension} is a homotopy pushout square.
 By \todo{Lurie somewhere, see also nlab}, this is the case if the three objects forming the upper left span are cofibrant and the left or top leg is a cofibration.
 The cofibrations of $\mathrm{Lcc}$ are the maps whose underlying functors are injective on objects.
