Add note on trivial lifting conditions

--- a/main.tex
+++ b/main.tex
@@ -542,6 +542,10 @@ We want to consider lcc-marked categories equivalent if they represent the same 
   For this we must show that if $\mathcal{C}$ is a lcc-marked category, then marked maps of the form $i(\mathrm{Pb}) \rightarrow \mathcal{C}$ are stable under homotopy and $\mathrm{sSet}(\mathbf{Pb_i}, \mathcal{C})$ for $i = 0, 1, 2$ has the right lifting property with respect to $\partial \Delta^n \hookrightarrow \Delta^n$ for $n \leq 2$ if and only if the underlying category $U(\mathcal{C})$ has all pullbacks and maps $i(\mathrm{Pb}) \rightarrow U(\mathcal{C})$ are marked precisely when their images are a pullback squares.
 
   Let us unfold what it means that $\mathrm{sSet}(\mathbf{Pb_i}, \mathcal{C})$ has the right lifting property against $\partial \Delta^n \hookrightarrow \Delta^n$ for $i = 0, 1, 2$ and $n = 0, 1, 2$.
+  \todo{
+    Explain the ``vacuousness'' in the following list better.
+    The conditions for $n = 2$ are trivially true for functors that are surjective on morphisms, and the condition for $n = 1$ is trivial if the functors are surjective on objects.
+  }
   \begin{itemize}
     \item
       For $i = 0$ and $n = 0$ this is equivalent to images of marked maps $\mathrm{Pb} \rightarrow U(\mathcal{C})$ being commutative squares.
